2009-06-21  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11358: typoLink() perfomance improvement (thanks to Vladimir Podkovanov)

2009-05-18  Benjamin Mack  <benni@typo3.org>

	* Fixed bug / Feature #11293: Login page is not translatable

2009-05-18  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11009: External Links get prepended with http://typo3 in the RTEhtmlarea in Firefox 3.0.11/3.5b4

2009-06-15  Ingo Renner  <ingo@typo3.org>

	* Updated the caching framework to the according FLOW3 revision 2616

2009-06-15  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #11119: DBAL: Mapping in query does not takes care of remapping "table.field" in a WHERE clause (thanks to Xavier Perseguers)

2009-06-15  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11275: Bring back the divider CE
	* Fixed bug #11052: Show Warning if memcache is configured but not installed / working on the server

2009-06-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9984: Element Browser window is MUCH too small (thanks to Georg Kuehnberger)
	* Fixed bug #11047: DBAL does not support CLOB/BLOB when using a mapped table name (thanks to Xavier Perseguers)
	* Fixed bug #11076: DBAL: Cannot connect to non-local Oracle database with SID (thanks to Xavier Perseguers)
	* Fixed bug #11327: Change 2 forgotten icons in t3skin (edit_fe and edit_file)

2009-06-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10617: Collapse in list module doesn't process returnPath
	* Fixed bug #8875: typo3 logo in backend on top left looks not perfect because it has white background on gradient background (thanks to Johannes Feustel)

2009-06-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10515: extend Filelist with icon block according to list view

2009-06-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11272: Autoloader floads sysLog with XCLASS failures
	* Follow-up to feature #11314: Removed hardcoded length of a session ID