@@ -82,3 +82,13 @@
 </table>
 <!-- ###LOGOUT_FORM### end -->
 
+<!-- ###LOGIN_NEWS### begin -->
+	<!-- Login screen news: -->
+	<h2 id="loginNewsTitle">###NEWS_HEADLINE###</h2>
+	<dl id="loginNews">
+        <!-- ###NEWS_ITEM### begin -->
+				<dt>###HEADER### <span>###DATE###</span></dt>
+				<dd>###CONTENT###</dd>
+        <!-- ###NEWS_ITEM### end -->
+	</dl>
+<!-- ###LOGIN_NEWS### end -->
