@@ -1,3 +1,7 @@
+2009-06-21  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed #11356: Backend Login News is not templateable
+
 2009-06-21  Rupert Germann  <rupi@gmx.li>
 
 	* Fixed bug #11358: typoLink() perfomance improvement (thanks to Vladimir Podkovanov)
